--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,39 +1,52 @@
 <div class="shadow mb-5 bg-white">
-    <img class="center img-fluid" src="../assets/images/header.jpg">
+  <img class="center img-fluid" src="/src/assets/images/header.jpg">
 </div>
 <div class="container">
-    <div class="row mt-3 mr-3 ml-3">
-        <div class="col-sm my-auto center float-right">
-            <img src="../../assets/images/home-activity-text-1.jpg" class="img-thumbnail mx-auto d-block" height="400px" width="400px">
-        </div>
-        <div class="col-sm my-auto float-left">
-            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt odio et lectus laoreet, vitae pellentesque quam faucibus. Nam placerat, nisl ut varius blandit, risus mauris suscipit nulla, sed maximus orci risus sed erat. Nunc vestibulum porta ligula eget efficitur. Praesent consectetur purus odio, vitae laoreet est laoreet aliquam. Integer neque nisl, posuere sed velit non, laoreet tristique massa.</p>
-        </div>
+  <div class="row mt-3 mr-3 ml-3">
+    <div class="col-sm my-auto center float-right">
+      <img src="../../assets/images/home-activity-text-1.jpg" class="img-thumbnail mx-auto d-block" height="400px"
+        width="400px">
     </div>
-    <h2 class="mt-3">What We Do</h2>
-    <div class="row mt-1 mr-3 ml-3">
-        <div class="col-sm">
-            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt odio et lectus laoreet, vitae pellentesque quam faucibus. Nam placerat, nisl ut varius blandit, risus mauris suscipit nulla, sed maximus orci risus sed erat. Nunc vestibulum porta ligula eget efficitur. Praesent consectetur purus odio, vitae laoreet est laoreet aliquam. Integer neque nisl, posuere sed velit non, laoreet tristique massa.</p>
-        </div>
+    <div class="col-sm my-auto float-left">
+      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt odio et
+        lectus laoreet, vitae pellentesque quam faucibus. Nam placerat, nisl ut varius blandit, risus mauris suscipit
+        nulla, sed maximus orci risus sed erat. Nunc vestibulum porta ligula eget efficitur. Praesent consectetur purus
+        odio, vitae laoreet est laoreet aliquam. Integer neque nisl, posuere sed velit non, laoreet tristique massa.</p>
     </div>
-    <div class="row mt-1 mr-3 ml-3">
-        <div class="col-sm mr-1">
-            <img src="../../assets/images/home-activity-1.jpg" class="img-thumbnail">
-            <p class="text-justify mr-3 ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt odio et lectus laoreet, vitae pellentesque quam faucibus.</p>
-        </div>
-        <div class="col-sm mr-1">
-            <img src="../../assets/images/home-activity-2.jpg" class="img-thumbnail">
-            <p class="text-justify mr-3 ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt odio et lectus laoreet, vitae pellentesque quam faucibus.</p>
-        </div>
-        <div class="col-sm ">
-            <img src="../../assets/images/home-activity-3.jpg" class="img-thumbnail">
-            <p class="text-justify mr-3 ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt odio et lectus laoreet, vitae pellentesque quam faucibus.</p>
-        </div>
+  </div>
+  <h2 class="mt-3">What We Do</h2>
+  <div class="row mt-1 mr-3 ml-3">
+    <div class="col-sm">
+      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt odio et
+        lectus laoreet, vitae pellentesque quam faucibus. Nam placerat, nisl ut varius blandit, risus mauris suscipit
+        nulla, sed maximus orci risus sed erat. Nunc vestibulum porta ligula eget efficitur. Praesent consectetur purus
+        odio, vitae laoreet est laoreet aliquam. Integer neque nisl, posuere sed velit non, laoreet tristique massa.</p>
     </div>
-    <h2 class="mt-3">How To Get Involved</h2>
-    <div class="row mt-1 ml-3 mr-3">
-        <div class="col-sm">
-            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt odio et lectus laoreet, vitae pellentesque quam faucibus. Nam placerat, nisl ut varius blandit, risus mauris suscipit nulla, sed maximus orci risus sed erat. Nunc vestibulum porta ligula eget efficitur. Praesent consectetur purus odio, vitae laoreet est laoreet aliquam. Integer neque nisl, posuere sed velit non, laoreet tristique massa.</p>
-        </div>
+  </div>
+  <div class="row mt-1 mr-3 ml-3">
+    <div class="col-sm mr-1">
+      <img src="../../assets/images/home-activity-1.jpg" class="img-thumbnail">
+      <p class="text-justify mr-3 ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt
+        odio et lectus laoreet, vitae pellentesque quam faucibus.</p>
     </div>
+    <div class="col-sm mr-1">
+      <img src="../../assets/images/home-activity-2.jpg" class="img-thumbnail">
+      <p class="text-justify mr-3 ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt
+        odio et lectus laoreet, vitae pellentesque quam faucibus.</p>
+    </div>
+    <div class="col-sm ">
+      <img src="../../assets/images/home-activity-3.jpg" class="img-thumbnail">
+      <p class="text-justify mr-3 ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt
+        odio et lectus laoreet, vitae pellentesque quam faucibus.</p>
+    </div>
+  </div>
+  <h2 class="mt-3">How To Get Involved</h2>
+  <div class="row mt-1 ml-3 mr-3">
+    <div class="col-sm">
+      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt odio et
+        lectus laoreet, vitae pellentesque quam faucibus. Nam placerat, nisl ut varius blandit, risus mauris suscipit
+        nulla, sed maximus orci risus sed erat. Nunc vestibulum porta ligula eget efficitur. Praesent consectetur purus
+        odio, vitae laoreet est laoreet aliquam. Integer neque nisl, posuere sed velit non, laoreet tristique massa.</p>
+    </div>
+  </div>
 </div>
