--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="shadow mb-5 bg-white">
-  <img class="center img-fluid" src="/assets/images/header.jpg">
+  <img class="center img-fluid" src="assets/images/header.jpg">
 </div>
 <div class="container">
   <div class="row mt-3 mr-3 ml-3">
