working fix to the assets problem

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row mt-3 mr-3 ml-3">
     <div class="col-sm my-auto center float-right">
-      <img src="../../assets/images/home-activity-text-1.jpg" class="img-thumbnail mx-auto d-block" height="400px"
+      <img src="assets/images/home-activity-text-1.jpg" class="img-thumbnail mx-auto d-block" height="400px"
         width="400px">
     </div>
     <div class="col-sm my-auto float-left">
@@ -25,17 +25,17 @@
   </div>
   <div class="row mt-1 mr-3 ml-3">
     <div class="col-sm mr-1">
-      <img src="../../assets/images/home-activity-1.jpg" class="img-thumbnail">
+      <img src="assets/images/home-activity-1.jpg" class="img-thumbnail">
       <p class="text-justify mr-3 ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt
         odio et lectus laoreet, vitae pellentesque quam faucibus.</p>
     </div>
     <div class="col-sm mr-1">
-      <img src="../../assets/images/home-activity-2.jpg" class="img-thumbnail">
+      <img src="assets/images/home-activity-2.jpg" class="img-thumbnail">
       <p class="text-justify mr-3 ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt
         odio et lectus laoreet, vitae pellentesque quam faucibus.</p>
     </div>
     <div class="col-sm ">
-      <img src="../../assets/images/home-activity-3.jpg" class="img-thumbnail">
+      <img src="assets/images/home-activity-3.jpg" class="img-thumbnail">
       <p class="text-justify mr-3 ml-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt
         odio et lectus laoreet, vitae pellentesque quam faucibus.</p>
     </div>
