--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
           </div>
           <a class="auth my-2 my-sm-0" type="button" *ngIf="authService.isLoggedIn() === false"
             (click)="isMenuCollapsed = true" (click)="authService.msLogin()"><img src="assets/icons/Microsoft_icon.png"
-              height="20px" width="20px"> LOGIN</a>
+              height="20px" width="20px">Login</a>
         </div>
       </div>
     </div>
