--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <div class="d-flex justify-content-center align-items-center" style="min-height: 500px;">
-        <div class="card p-2">
-            <p>Contact Works</p>
-        </div>
+  <div class="vh-100 d-flex justify-content-center align-items-center">
+    <div class="card p-2">
+      <p>Contact Works</p>
     </div>
+  </div>
 </div>
