--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="vh-100 d-flex justify-content-center align-items-center">
     <div class="card p-2">
-      <p>Contact Works</p>
+      <iframe width="640px" height="780px"
+        src="https://forms.office.com/Pages/ResponsePage.aspx?id=FunhicgNyEWOGcqTWnV6VJyNhomJqEdFrLi9D2IxyElUNTBUT0VGQ0QwR1ZVTEpORDNPRlZKSTI1Ti4u&embed=true"
+        frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh"
+        allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
     </div>
   </div>
 </div>
