--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" routerLink="/">
-        <fa-icon [icon]="faHome"></fa-icon> HAMILTON NAVY CADETS
+        <fa-icon [icon]="faHome"></fa-icon> WAIKATO NAVY CADETS
       </a>
       <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
         &#9776;
