--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,59 +2,52 @@
   <img class="center img-fluid" src="assets/images/header.jpg">
 </div>
 <div class="container">
-  <div class="row mt-3 mr-3 ml-3">
-    <div class="col-sm">
-      <p class="text-justify">Training Ship Waikato, also known as Waikato Navy Cadet's, is a Unit of the New Zealand
-        Cadet Forces. Training children aged 13 to 18 years of age we deliver our content through our weekly parade
-        nights and weekend activities.</p>
-    </div>
+  <div>
+    <p class="text-justify ml-5 mr-5">Training Ship Waikato, also known as Waikato Navy Cadet’s is one of the three
+      non-profit branches of the New Zealand Cadet Forces and is aimed at persons aged 13 to 18 years of age. The main
+      focus for our cadet’s is military-base leadership and personal development through a range of both national and
+      regional courses providing experience and qualifications, along with our weekly parade nights and weekend
+      activities.
+    </p>
   </div>
-  <h2 class="mt-3">What We Do</h2>
-  <div class="row mt-1 mr-3 ml-3">
-    <div class="col-sm">
-      <p class="text-justify">Our training focus's around leadership and will challenge you to lead your peers to
-        achieve tasks. To compliment this leadership focus we train do activities such as
-        Camping,
-        Tramping,
-        Sailing & Powerboats,
-        and Range shooting
-        During your time as a cadet you will likely also visit Defence Force bases and partake in ceremonies where you
-        are seen to represent the Defence Force.</p>
-    </div>
+  <div>
+    <h2>What We Do</h2>
+    <p class="text-justify ml-5 mr-5">Our training focus's around leadership and will challenge you to lead your peers
+      to
+      achieve tasks. To compliment this leadership focus we train do activities such as
+      Camping,
+      Tramping,
+      Sailing & Powerboats,
+      and Range shooting
+      During your time as a cadet you will likely also visit Defence Force bases and partake in ceremonies where you
+      are seen to represent the Defence Force.</p>
   </div>
-  <div class="row mt-1 mr-3 ml-3">
-    <div class="col-lg mr-1">
+
+  <h2>Core Values</h2>
+  <div class="row mt-1 mr-4 ml-4">
+    <div class="col-lg">
       <img src="assets/images/home-activity-1.jpg" class="img-thumbnail">
       <h5 class="text-center">Courage</h5>
-      <p class="text-justify mr-3 ml-3">Confronting challenges, both physical and moral, to overcome any
+      <p class="text-justify">Confronting challenges, both physical and moral, to overcome any
         adversity.</p>
     </div>
-    <div class="col-lg mr-1">
+    <div class="col-lg">
       <img src="assets/images/home-activity-2.jpg" class="img-thumbnail">
       <h5 class="text-center">Comradeship</h5>
-      <p class="text-justify mr-3 ml-3">Looking out for each other, having respect for all, and
+      <p class="text-justify">Looking out for each other, having respect for all, and
         championing the benefits of friendship, teamwork and diversity.</p>
     </div>
-    <div class="col-lg ">
+    <div class="col-lg">
       <img src="assets/images/home-activity-3.jpg" class="img-thumbnail">
       <h5 class="text-center">Commitment</h5>
-      <p class="text-justify mr-3 ml-3">Being reliable and loyally serving and supporting the NZCF, local
+      <p class="text-justify">Being reliable and loyally serving and supporting the NZCF, local
         communities and New Zealand.</p>
     </div>
-    <div class="col-lg ">
+    <div class="col-lg">
       <img src="assets/images/home-activity-text-1.jpg" class="img-thumbnail">
       <h5 class="text-center">Integrity</h5>
-      <p class="text-justify mr-3 ml-3">Having self discipline and always being honest, trustworthy and
+      <p class="text-justify">Having self discipline and always being honest, trustworthy and
         responsible.</p>
-    </div>
-  </div>
-  <h2 class="mt-3">How To Get Involved</h2>
-  <div class="row mt-1 ml-3 mr-3">
-    <div class="col-sm">
-      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt odio et
-        lectus laoreet, vitae pellentesque quam faucibus. Nam placerat, nisl ut varius blandit, risus mauris suscipit
-        nulla, sed maximus orci risus sed erat. Nunc vestibulum porta ligula eget efficitur. Praesent consectetur purus
-        odio, vitae laoreet est laoreet aliquam. Integer neque nisl, posuere sed velit non, laoreet tristique massa.</p>
     </div>
   </div>
 </div>
