--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,11 @@
       <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
+            <a class="nav-link" routerLink="/about" (click)="isMenuCollapsed = true">
+              <fa-icon [icon]="faInfo"></fa-icon>About
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="/contact" (click)="isMenuCollapsed = true">
               <fa-icon [icon]="faEnvelope"></fa-icon> Contact Us
             </a>
@@ -43,7 +48,7 @@
 
 <footer class="d-block p-2 bg-dark text-white mt-4">
   <div class="container">
-    <h3 class="font-weight-lighter small">Hamilton Navy Cadets</h3>
+    <h3 class="font-weight-lighter small">Waikato Navy Cadets</h3>
     <div class=" row ml-3">
       <div class="col-sm">
         <a class="font-weight-lighter small" routerLink="/">Home</a> |
