Change the nav bar color and font along with only displaying the name if loged in

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <h1 class="text-header">Waikato Navy Cadets</h1>
     </div>
   </div>
-  <nav class="navbar navbar-expand-lg navbar-dark background-alt text-normal">
+  <nav class="navbar navbar-expand-lg navbar-dark background-alt text-medium text-light">
     <div class="container">
       <a class="navbar-brand text-medium" href="#">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -21,6 +21,9 @@
             <a class="nav-link" href="events">Events<span class="sr-only">(current)</span></a>
           </li>
         </ul>
+      </div>
+      <div class="form-inline my-2 my-lg-0" *ngIf="authService.isLoggedIn()">
+        <label>{{authService.msalService.getAccount().name}}</label>
       </div>
     </div>
   </nav>
