--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,7 +44,8 @@
 
   </div>
   <div>
-    <p class="text-large text-justify">Training Ship Waikato, also known as Waikato Navy Cadet’s is one of the three
+    <p class="text-large text-justify font-weight-lighter">Training Ship Waikato, also known as Waikato Navy Cadet’s is
+      one of the three
       non-profit
       branches of the New
       Zealand
