--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,57 +1,87 @@
 <div class="container p-5 text-dark text-medium">
+
   <div class="row mt-5 mb-5">
 
-    <div class="card col-lg m-2 background-dark">
-      <img src="assets/images/home-activity-1.jpg" class="card-img-top" alt="...">
-      <div class="card-body p-5 text-justify">
-        <h5 class="card-title text-light text-large text-center">Courage</h5>
-        <p class="card-text text-light font-weight-lighter">Confronting challenges, both physical and moral, to overcome
-          any adversity.</p>
-      </div>
+    <div class="col-lg">
+      <h2 class="text-large text-center text-alt">Where To Find Us?</h2>
+      <a
+        href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z">
+        <img src="assets/images/cadetMap.png" class="rounded img-fluid card">
+      </a>
+      <p class="text-justify font-weight-lighter">
+        You can find us at <b class="text-alt"><a
+            href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z">6
+            Cambridge Road Hamilton</a></b> where we hold our weekly parade nights.
+      </p>
     </div>
 
-    <div class="card col-lg m-2 background-dark">
-      <img src="assets/images/home-activity-2.jpg" class="card-img-top" alt="...">
-      <div class="card-body p-5 text-justify">
-        <h5 class="card-title text-light text-large text-center">Commitment</h5>
-        <p class="card-text text-light font-weight-lighter">Being reliable and loyally serving and supporting the NZCF,
-          local
-          communities
-          and New Zealand.</p>
-      </div>
+    <div class="col-lg">
+      <p class="text-large text-justify font-weight-lighter">Training Ship Waikato, also known as Waikato Navy Cadet’s
+        is
+        one of the three
+        non-profit
+        branches of the New
+        Zealand
+        Cadet Forces and is aimed at persons aged 13 to 18 years of age. The main focus for our cadet’s is military-base
+        leadership and personal development through a range of both national and regional courses providing experience
+        and
+        qualifications, along with our weekly parade nights and weekend activities.</p>
     </div>
-
-    <div class="card col-lg m-2 background-dark">
-      <img src="assets/images/home-activity-3.jpg" class="card-img-top" alt="...">
-      <div class="card-body p-5 text-justify">
-        <h5 class="card-title text-light text-large text-center">Comradeship</h5>
-        <p class="card-text text-light font-weight-lighter">Looking out for each other, having respect for all, and
-          championing the
-          benefits of friendship, teamwork and diversity</p>
-      </div>
-    </div>
-
-    <div class="card col-lg m-2 background-dark">
-      <img src="assets/images/home-activity-text-1.jpg" class="card-img-top" alt="...">
-      <div class="card-body p-5 text-justify">
-        <h5 class="card-title text-light text-large text-center">Integrity</h5>
-        <p class="card-text text-light font-weight-lighter">Having self discipline and always being honest, trustworthy
-          and responsible.
-        </p>
-      </div>
-    </div>
-
-
   </div>
-  <div>
-    <p class="text-large text-justify font-weight-lighter">Training Ship Waikato, also known as Waikato Navy Cadet’s is
-      one of the three
-      non-profit
-      branches of the New
-      Zealand
-      Cadet Forces and is aimed at persons aged 13 to 18 years of age. The main focus for our cadet’s is military-base
-      leadership and personal development through a range of both national and regional courses providing experience
-      and
-      qualifications, along with our weekly parade nights and weekend activities.</p>
+
+  <div class="row mt-5 mb-5">
+
+    <div class="col-xl">
+      <div class="row">
+        <div class="card col-md m-2 background-dark">
+          <img src="assets/images/home-activity-1.jpg" class="card-img-top" alt="...">
+          <div class="card-body p-5 text-justify">
+            <h5 class="card-title text-light text-large text-center">Courage</h5>
+            <p class="card-text text-light font-weight-lighter">Confronting challenges, both physical and moral, to
+              overcome
+              any adversity.</p>
+          </div>
+        </div>
+
+        <div class="card col-md m-2 background-dark">
+          <img src="assets/images/home-activity-2.jpg" class="card-img-top" alt="...">
+          <div class="card-body p-5 text-justify">
+            <h5 class="card-title text-light text-large text-center">Commitment</h5>
+            <p class="card-text text-light font-weight-lighter">Being reliable and loyally serving and supporting the
+              NZCF,
+              local
+              communities
+              and New Zealand.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xl">
+      <div class="row">
+        <div class="card col-md m-2 background-dark">
+          <img src="assets/images/home-activity-3.jpg" class="card-img-top" alt="...">
+          <div class="card-body p-5 text-justify">
+            <h5 class="card-title text-light text-large text-center">Comradeship</h5>
+            <p class="card-text text-light font-weight-lighter">Looking out for each other, having respect for all, and
+              championing the
+              benefits of friendship, teamwork and diversity</p>
+          </div>
+        </div>
+
+        <div class="card col-md m-2 background-dark">
+          <img src="assets/images/home-activity-text-1.jpg" class="card-img-top" alt="...">
+          <div class="card-body p-5 text-justify">
+            <h5 class="card-title text-light text-large text-center">Integrity</h5>
+            <p class="card-text text-light font-weight-lighter">Having self discipline and always being honest,
+              trustworthy
+              and responsible.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 </div>
