--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,22 +8,25 @@
     <div class="container">
       <a class="navbar-brand text-medium" href="#">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+        (click)="isMenuCollapsed = !isMenuCollapsed">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="contact">Contact Us<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="contact" (click)="isMenuCollapsed = true">Contact Us<span
+                class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="events">Events<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="events" (click)="isMenuCollapsed = true">Events<span
+                class="sr-only">(current)</span></a>
           </li>
         </ul>
-      </div>
-      <div class="form-inline my-2 my-lg-0" *ngIf="authService.isLoggedIn()">
-        <label>{{authService.msalService.getAccount().name}}</label>
+        <div class="form-inline my-2 my-lg-0" *ngIf="authService.isLoggedIn()">
+          <label>{{user.name}}</label>
+        </div>
       </div>
     </div>
   </nav>
