adds a margin to prevent the where are we and about text being too close on small screens

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
   <div class="row mt-5 mb-5">
 
-    <div class="col-lg">
+    <div class="col-lg mb-5">
       <h2 class="text-large text-center text-alt">Where To Find Us?</h2>
       <a
         href="https://www.google.co.nz/maps/place/6+Cambridge+Road,+Hamilton+East,+Hamilton+3216/@-37.7981262,175.3067215,17z">
