Change the card background

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
 
     <div class="col-xl">
       <div class="row">
-        <div class="card col-md m-2 background-dark">
+        <div class="card col-md m-2 background-alt">
           <img src="assets/images/home-activity-1.jpg" class="card-img-top" alt="...">
           <div class="card-body p-5 text-justify">
             <h5 class="card-title text-light text-large text-center">Courage</h5>
@@ -43,7 +43,7 @@
           </div>
         </div>
 
-        <div class="card col-md m-2 background-dark">
+        <div class="card col-md m-2 background-alt">
           <img src="assets/images/home-activity-2.jpg" class="card-img-top" alt="...">
           <div class="card-body p-5 text-justify">
             <h5 class="card-title text-light text-large text-center">Commitment</h5>
@@ -59,7 +59,7 @@
 
     <div class="col-xl">
       <div class="row">
-        <div class="card col-md m-2 background-dark">
+        <div class="card col-md m-2 background-alt">
           <img src="assets/images/home-activity-3.jpg" class="card-img-top" alt="...">
           <div class="card-body p-5 text-justify">
             <h5 class="card-title text-light text-large text-center">Comradeship</h5>
@@ -69,7 +69,7 @@
           </div>
         </div>
 
-        <div class="card col-md m-2 background-dark">
+        <div class="card col-md m-2 background-alt">
           <img src="assets/images/home-activity-text-1.jpg" class="card-img-top" alt="...">
           <div class="card-body p-5 text-justify">
             <h5 class="card-title text-light text-large text-center">Integrity</h5>
