Makes some text in the description bald

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,16 +16,20 @@
     </div>
 
     <div class="col-lg">
-      <p class="text-large text-justify font-weight-lighter">Training Ship Waikato, also known as Waikato Navy Cadet’s
+      <p class="text-large text-justify font-weight-lighter">
+        Training Ship Waikato, also known as Waikato Navy Cadet’s
         is
         one of the three
-        non-profit
+        <b class="text-alt">non-profit</b>
         branches of the New
         Zealand
-        Cadet Forces and is aimed at persons aged 13 to 18 years of age. The main focus for our cadet’s is military-base
-        leadership and personal development through a range of both national and regional courses providing experience
+        Cadet Forces and is aimed at persons aged <b class="text-alt">13 to 18 years of age</b>. The main focus for our
+        cadet’s is military-base
+        leadership and <b class="text-alt">personal development</b> through a range of both national and regional
+        courses providing experience
         and
-        qualifications, along with our weekly parade nights and weekend activities.</p>
+        qualifications, along with our weekly parade nights and weekend activities.
+      </p>
     </div>
   </div>
 
