--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class=" text-alt">
     <div class="container">
-      <h1 class="text-header">Waikato Navy Cadets</h1>
+      <h1 class="text-header"><img src="assets/icons/Waikato%20Crest.png" width="100" class="m-2">Waikato Navy Cadets</h1>
     </div>
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark background-alt text-medium text-light">
@@ -15,13 +15,16 @@
 
       <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="contact" (click)="isMenuCollapsed = true">Contact Us</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="events" (click)="isMenuCollapsed = true">Events</a>
           </li>
-          <li class="nav-item active" *ngIf="authService.isLoggedIn()">
+          <li class="nav-item">
+            <a class="nav-link" href="join" (click)="isMenuCollapsed = true">Join</a>
+          </li>
+          <li class="nav-item" *ngIf="authService.isLoggedIn()">
             <a class="nav-link" href="https://www.cadetnet.org.nz/" (click)="isMenuCollapsed = true">Cadet Net</a>
           </li>
         </ul>
