--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,9 +1,9 @@
 <div class="container-md">
   <div class="justify-content-center align-items-center">
     <div class="card mt-4 ">
-      <iframe width="100%" height="1700"
+      <iframe width="100%" height="1750"
         src="https://forms.office.com/Pages/ResponsePage.aspx?id=FunhicgNyEWOGcqTWnV6VIXaTrMLjZxCkpylwC_VBV9UMkVaRUo0VTMzNjdUMEtRMkdKQk5LRDlEMCQlQCN0PWcu&embed=true"
-        frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%;" allowfullscreen
+        style="border: none; max-width:100%;" allowfullscreen
         webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
     </div>
   </div>
