--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,12 +27,17 @@ a {
   }
 }
 
+
 .background-dark {
   background-color: $background-dark;
 }
 
 .background-light {
   background-color: $background-light;
+}
+
+.background-lightAlpha{
+  background-color: transparentize($background-light,0.2)
 }
 
 .background-alt {
@@ -52,12 +57,17 @@ a {
 }
 
 .text-header {
-  font-size: 10rem;
+  font-size: 7rem;
+  font-weight: 600;
+}
+
+.text-subheader{
+  font-size: 5rem;
   font-weight: 600;
 }
 
 .text-large {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 500;
 }
 
